--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,17 @@
 body {
     font-family: "Montserrat", sans-serif;
 }
+
+
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+  }
+  
